--- a/styles/dark.qss
+++ b/styles/dark.qss
@@ -17,7 +17,7 @@ QLabel {
 QGroupBox {
     border: 2px solid #999999;
     background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1,
-                              stop: 0 #000000, stop: 1 #4D4E5A);
+                              stop: 0 #151516, stop: 1 #3C3C43);
     color: #FFFFFF;
 }
 
@@ -54,7 +54,7 @@ QPushButton:pressed {
 QPushButton:disabled {
     background: #313037;
     border: 2px solid #01011E;
-    color: #6c7086;
+    color: #797A84;
 }
 
 /* ===== ПОЛЯ ВВОДА ===== */
@@ -161,13 +161,13 @@ QTableView::item:selected {
 QHeaderView::section {
     background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0,
                               stop: 0 #5A5A64, stop: 1 #5A5A64);
-    color: #DBE6FF;
+    color: #FFFFFF;
     border: 1px solid #2E2F39;
 }
 
 QTableCornerButton::section {
     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                              stop: 0 #FFFFFF, stop: 1 #5A5A64);
+                              stop: 0 #000000, stop: 1 #000000);
     border: 1px solid #2E2F39;
 }
 
@@ -264,5 +264,5 @@ QMessageBox QLabel {
 
 QMessageBox QPushButton {
     min-width: 80px;
-    color: #000000
+    color: #FFFFFF
 }
