--- a/styles/dark.qss
+++ b/styles/dark.qss
@@ -102,8 +102,8 @@ QSpinBox::up-button, QSpinBox::down-button,
 QDateEdit::up-button, QDateEdit::down-button,
 QTimeEdit::up-button, QTimeEdit::down-button {
     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                              stop: 0 #313244, stop: 1 #1e1e2e);
-    border: 1px solid #01011E;
+                              stop: 0 #414148, stop: 1 #84848F);
+    border: 1px solid #000000;
 }
 
 QSpinBox::up-button:hover, QSpinBox::down-button:hover,
@@ -115,7 +115,7 @@ QTimeEdit::up-button:hover, QTimeEdit::down-button:hover {
 /* ===== ЧЕКБОКСЫ ===== */
 QCheckBox {
     background: transparent;
-    color: #bac2de;
+    color: #FFFFFF;
 }
 
 QCheckBox::indicator {
@@ -167,7 +167,7 @@ QHeaderView::section {
 
 QTableCornerButton::section {
     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                              stop: 0 #000000, stop: 1 #000000);
+                              stop: 0 #000000, stop: 1 #5A5A64);
     border: 1px solid #2E2F39;
 }
 
@@ -176,7 +176,7 @@ QTableView::item {
 }
 
 QTableView::item:hover {
-    background-color: rgba(171, 178, 186, 0.18); /* мягкий зелёный для дарк-темы */
+    background-color: rgba(171, 178, 186, 0.18);
 }
 
 QTableView::item:selected {
